@@ -1,6 +1,10 @@
-// LanguageSelect.h : header file
-//
-// Dialog to choose language of user interface
+/** 
+ * @file  LanguageSelect.h
+ *
+ * @brief Declaration file for CLanguageSelect dialog.
+ */
+// RCS ID line follows -- this is updated by CVS
+// $Id$
 
 #if !defined(AFX_LANGUAGESELECT_H__4395A84F_E8DF_11D1_BBCB_00A024706EDC__INCLUDED_)
 #define AFX_LANGUAGESELECT_H__4395A84F_E8DF_11D1_BBCB_00A024706EDC__INCLUDED_
@@ -17,7 +21,12 @@
 #define LANGUAGE_SECTION  _T("Locale")
 #define COUNTRY_ENTRY     _T("LanguageId")
 
-
+/**
+ * @brief Dialog for selecting GUI language.
+ *
+ * Language select dialog shows list of installed GUI languages and
+ * allows user to select one for use.
+ */
 class CLanguageSelect : public CDialog
 {
 // Construction
@@ -25,6 +34,7 @@ public:
 	void SetModuleHandle(HMODULE hModule) { m_hModule = hModule; }
 	CLanguageSelect(UINT idMainMenu, UINT idDocMenu, BOOL bReloadMenu =TRUE, BOOL bUpdateTitle =TRUE, CWnd* pParent = NULL);   // standard constructor
 	UINT GetAvailLangCount();
+	BOOL AreLangsInstalled() const;
 	void GetAvailLangs( CWordArray& uiLanguageAry, CStringArray& DllFileNameAry );	   
 	WORD GetLangId() { return m_wCurLanguage; };
 	void InitializeLanguage();
@@ -57,8 +67,8 @@ private:
 	void    GetDllsAt( LPCTSTR SearchPath, CStringArray& DllAry );
 	BOOL    GetLanguage( const CString& DllName, WORD& uiLanguage ) ;
 	UINT    GetDocResId();
-	CString GetPath( LPCTSTR FileName);
-	CString GetLanguagePath(LPCTSTR FileName);
+	CString GetPath( LPCTSTR FileName) const;
+	CString GetLanguagePath(LPCTSTR FileName) const;
 	CString GetLanguageString( WORD LangId );
 	CString GetNativeLanguageNameString( int idx );
 	void LoadAndDisplayLanguages();
